src/theme/fonts.scss
@import "./colors.scss";

h1,h2,h3,h4,p,span,button,ul,li,input{
    font-family: 'Montserrat', sans-serif;
}
.title{
    font-size: 3rem;
    font-weight: bold;
    letter-spacing: 0.07em;
    line-height: 58.51px;
    color:$white;
    margin:0;
    padding:0;    
}
.subtitleWhite{
    font-style: normal;
    font-weight: 700;
    font-size: 2rem;
    line-height: 39px;
    letter-spacing: 0.07em;
    color: $white;
    margin:0;
}
.titleLabel{
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 29px;
    letter-spacing: 0.07em;
    color:$white;
    margin:0;
    padding:0;
}
.caption{
    font-weight: 400;
    font-size: 16px;
    line-height: 19.5px;
    letter-spacing: 7%;
    color:$white;
}

